# rabex-cli

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: cli.rs  complete.rs  component_path.rs  ctx.rs  lib.rs  locate.rs  main.rs  output.rs  qualify.rs  resolve.rs  target.rs
src/commands/: bundle.rs  file.rs  game.rs  info.rs  ls.rs  obj.rs
src/commands/file/: preloads.rs  references.rs  tree.rs
tests/: cli.rs  core.rs
tests/fixtures/: mod.rs
