[package]
name = "rabex-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rabex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
rabex-env = { version = "0.1", path = "../rabex-env" }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
serde = "1.0.228"
tempfile = "3.27.0"
