[package]
name = "rabex-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rabex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
rabex-env = { version = "0.1", path = "../rabex-env" }
# Not used directly — declared only to turn on bundle compression features.
# Cargo unifies features across the graph, so rabex-env's rabex gets them too,
# letting us read bundles in any compression format. Same git source as
# rabex-env's.
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", default-features = false, features = [
  "compression-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamlocate = "2.1.0"
rayon = "1.12.0"
rustc-hash = "2.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
