[package]
name = "rabex-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command-line tool to inspect Unity serialized files, asset bundles and addressables"
repository = "https://github.com/jakobhellermann/rabex-cli"
categories = ["command-line-utilities", "game-development"]
keywords = ["unity", "assetbundle", "serializedfile", "addressables", "cli"]

[[bin]]
name = "rabex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
rabex-env = { version = "0.1", path = "../rabex-env" }
rabex = { version = "0.1", default-features = false, features = [
	"compression-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamlocate = "2.1"
rayon = "1.12"
rustc-hash = "2.1"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

[lints.clippy]
too_many_arguments = "allow"
